--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,12 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </head>
   <body>
+    <form class="search-form" id="search-form"></form>
+    <ul class="gallery"></ul>
+    <button type="button" id="load-more">Load more</button>
+    <script src="./index.js"></script>
   </body>
 </html>
