--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <body>
     <form class="search-form" id="search-form"></form>
     <ul class="gallery"></ul>
-    <button type="button" id="load-more">Load more</button>
+    <div id="load-more"></div>
     <script src="./index.js"></script>
   </body>
 </html>
