--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <form class="search-form" id="search-form"></form>
